profile markup and styles

--- a/app/views/user/activate.html
+++ b/app/views/user/activate.html
@@ -1,3 +1,6 @@
-<h1>Activation</h1>
-<h2>success!</h2>
-<h2>nope..</h2>
+<h2>E-Mail-Bestätigung</h2>
+<h3>Hinweis</h3>
+<p>
+	Vielen Dank, dein Account wurde freigeschaltet.<br />
+	Du kannst dich nun unter <em>&bdquo;Mein Account&ldquo;</em> einloggen.
+</p>
