--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -183,7 +183,7 @@ h2 {
 }
 h3 {
 	font-size: 1em;
-	color: #888;
+	color: #999;
 	text-transform: uppercase;
 }
 p,
@@ -203,7 +203,7 @@ q {
 }
 code,
 pre {
-	background-color: #888;
+	background-color: #999;
 	color: #fefefe;
 	font-family: 'FiraMono', monospace;
 	line-height: 1.6;
@@ -219,29 +219,28 @@ pre {
 	}
 }
 hr {
-	padding-bottom: 1em;
-	margin-top: 2em;
+	margin: 1em 0;
 	clear: both;
 	border: 0;
-	border-top: 2px solid #29495c;
+	border-top: 3px solid #eee;
 }
 
 /* Inputs */
 ::-webkit-input-placeholder {
-	color: #888;
+	color: #999;
 }
 :-moz-placeholder {
-	color: #888;
+	color: #999;
 	opacity: 1;
 }
 ::-moz-placeholder {
-	color: #888;
+	color: #999;
 	opacity: 1;
 }
 :-ms-input-placeholder {
-	color: #888;
+	color: #999;
 }
-input::-ms-clear {
+input:not([type="search"])::-ms-clear {
 	display: none;
 }
 input,
@@ -260,7 +259,12 @@ textarea {
 	background-color: #eee;
 	color: #111;
 	font: normal 1em 'FiraMono', monospace;
+}
+input:not([type="button"]):not([type="submit"]) {
 	line-height: 2;
+}
+textarea {
+	line-height: 1.6;
 }
 input:focus,
 textarea:focus {
@@ -273,9 +277,13 @@ button {
 	background-color: #40a662;
 	color: #fefefe;
 	font-size: 1em;
+	font-weight: bold;
 	line-height: 2;
 	border: none;
 	box-shadow: inset 0 -3px 0 rgba(0,0,0,.3);
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	user-select: none;
 }
 input[type='button']:hover,
 input[type='button']:focus,
@@ -366,7 +374,12 @@ nav ul {
 	list-style: none;
 }
 nav li {
-
+	-webkit-hyphens: none;
+	-moz-hyphens: none;
+	hyphens: none;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	user-select: none;
 }
 nav li:not(:last-child) {
 	border-bottom: 3px solid #eee;
@@ -452,12 +465,52 @@ nav li > input:checked + form {
 /* Main Content */
 .content {
 	width: 100%;
-	max-width: 80em;
+	max-width: 50em;
 }
-
-/* Main Content */
 .content > *:not(:last-child) {
 	margin-bottom: 1em;
+}
+.content h2 span {
+	font-size: .55em;
+}
+.content h2+h3 {
+	margin-top: -1.5em;
+}
+.content ul,
+.content ol {
+	padding-left: 1em;
+	margin-top: 1em;
+}
+.content ol {
+	padding-left: 1.5em;
+}
+.content li > ul,
+.content li > ol {
+	margin-top: 0;
+}
+
+/* User profiles */
+ul.profile {
+	display: table;
+	padding: 0;
+}
+ul.profile li {
+	display: table-row;
+}
+ul.profile li:before {
+	display: table-cell;
+	content: attr(data-social) ':';
+	font-weight: bold;
+	padding-right: 1em;
+}
+.profile-edit > *:not(:last-child) {
+	margin-bottom: 1em;
+}
+.profile-edit > *:last-child {
+	max-width: 15em;
+}
+.profile-edit textarea {
+	height: 6em;
 }
 
 /* Styleguide */
@@ -478,11 +531,16 @@ nav li > input:checked + form {
 
 /* Footer */
 footer {
-	color: #888;
+	color: #999;
 	font-size: .8em;
 }
-footer a {
+footer a:link,
+footer a:visited {
+	color: #666;
 	white-space: nowrap;
+}
+footer a:hover {
+	color: #111;
 }
 footer p:not(:last-child) {
 	margin-bottom: 1em;
