error message in /user/activate

--- a/app/views/user/activate.html
+++ b/app/views/user/activate.html
@@ -4,3 +4,7 @@
 	Vielen Dank, dein Account wurde freigeschaltet.<br />
 	Du kannst dich nun unter <em>&bdquo;Mein Account&ldquo;</em> einloggen.
 </p>
+<p>
+  Dein Account konnte nicht freigeschalten werden.<br />
+  Bitte melde dich bei uns.
+</p>
