profile edit: colorpicker

--- a/app/views/user/profile.html
+++ b/app/views/user/profile.html
@@ -4,6 +4,8 @@
 
 <p>Deine Farbe im Editor:</p>
 
+<spectrum-colorpicker ng-model="yourFancyModel"></spectrum-colorpicker>
+
 <hr />
 
 <h3>Beschreibung</h3>
