profile: show correct email

--- a/app/views/user/profile.html
+++ b/app/views/user/profile.html
@@ -36,7 +36,7 @@
 
 <h3>E-Mail-Adresse bearbeiten</h3>
 
-<p>Deine aktuelle E-Mail-Adresse ist <strong>luto@shownot.es</strong>. Sie wird nicht veröffentlicht.</p>
+<p>Deine aktuelle E-Mail-Adresse ist <strong>{{user.email}}</strong>. Sie wird nicht veröffentlicht.</p>
 
 <form class="profile-edit">
 	<input type="email" value="" placeholder="Neue E-Mail-Adresse" required />
