profile: grammar, man, grammar!

--- a/app/views/user/profile.html
+++ b/app/views/user/profile.html
@@ -6,7 +6,7 @@
 
 <h3>Beschreibung & Farbe</h3>
 
-<p>Diese Angabe ist öffentlich einsehbar.</p>
+<p>Diese Angaben sind öffentlich einsehbar.</p>
 
 <form class="profile-edit">
 	<textarea placeholder="Erzähl uns etwas über dich. Was ist dein Lieblings-Podcast?" ng-model="user.bio"></textarea>
