--- a/app/views/rules.html
+++ b/app/views/rules.html
@@ -1,6 +1,6 @@
 <h2>Regeln</h2>
 
-<p>Jedes Mitglied von <strong>shownot.es</strong> verpflichtet sich dazu, die folgenden Regeln einzuhalten:</p>
+<p>Jedes Mitglied verpflichtet sich dazu, die folgenden Regeln einzuhalten:</p>
 
 <ol class="rules">
 	<li>
@@ -17,7 +17,7 @@
 	</li>
 	<li>
 		<strong>Die Mitarbeit erfolgt auf freiwilliger Basis.</strong><br />
-		Es gibt kein Recht auf eine Bezahlung. Mit eingenommenen Spendern werden die Technik und weitere anfallende Kosten beglichen.</li>
+		Es gibt kein Recht auf eine Bezahlung. Mit eingenommenen Spenden werden die Technik und weitere anfallende Kosten beglichen.</li>
 	<li>
 		<strong>Spam ist absolut verboten.</strong><br />
 		Das gilt sowohl für den Editor und den dazugehörigen Chat, als auch für unseren IRC-Kanal und E-Mail-Verkehr.
