--- a/app/views/user/activate.html
+++ b/app/views/user/activate.html
@@ -1,10 +1,10 @@
 <h2>E-Mail-Bestätigung</h2>
 <h3>Hinweis</h3>
-<p>
+<p ng-show="success">
 	Vielen Dank, dein Account wurde freigeschaltet.<br />
 	Du kannst dich nun unter <em>&bdquo;Mein Account&ldquo;</em> einloggen.
 </p>
-<p>
+<p ng-show="!success">
   Dein Account konnte nicht freigeschalten werden.<br />
   Bitte melde dich bei uns.
 </p>
