--- a/app/views/user/profile.html
+++ b/app/views/user/profile.html
@@ -16,6 +16,9 @@
 		</p>
 
 		<input type="submit" value="Änderungen speichern" ng-click="saveBioColor()" />
+		<action-status success-text="Deine Einstellungen wurden erfolgreich geändert."
+						fail-text="Bitte überprüfe noch einmal deine Angaben."
+						active="colorbio.active" status="colorbio.status"></action-status>
 	</form>
 </div>
 
@@ -30,6 +33,9 @@
 		<input type="text" value="" placeholder="App.net" ng-model="user.socials['appnet']" />
 		<input type="text" value="" placeholder="Twitter" ng-model="user.socials['twitter']" />
 		<input type="submit" value="Verknüpfungen speichern" ng-click="saveSocials()" />
+		<action-status success-text="Deine Verknüpfungen wurden erfolgreich geändert."
+						fail-text="Bitte überprüfe noch einmal deine Angaben."
+						active="socials.active" status="socials.status"></action-status>
 	</form>
 </div>
 
@@ -41,9 +47,10 @@
 	<form class="profile-edit">
 		<input type="email" value="" placeholder="Neue E-Mail-Adresse" required ng-model="changemail.email" />
 		<input type="password" value="" placeholder="Aktuelles Passwort bestätigen" required ng-model="changemail.password" />
-		<div ng-show="changemail.success">Deine E-Mail-Adresse wurde erfolgreich geändert.</div>
-		<div ng-show="changemail.fail">Bitte überprüfe noch einmal deine Angaben.</div>
 		<input type="submit" value="E-Mail-Adresse ändern" ng-click="changeMail()" />
+		<action-status success-text="Deine E-Mail-Adresse wurde erfolgreich geändert."
+						fail-text="Bitte überprüfe noch einmal deine Angaben."
+						active="changemail.active" status="changemail.status"></action-status>
 	</form>
 </div>
 
@@ -54,8 +61,9 @@
 		<input type="password" value="" placeholder="Aktuelles Passwort bestätigen" required ng-model="pwchange.password" />
 		<input type="password" value="" placeholder="Neues Passwort" required ng-model="pwchange.newpassword" />
 		<input type="password" value="" placeholder="Neues Passwort wiederholen" required ng-model="pwchange.newpassword2" ng-equals="{{pwchange.newpassword}}" />
-		<div ng-show="pwchange.success">Dein Passwort wurde erfolgreich geändert.</div>
-		<div ng-show="pwchange.fail">Bitte überprüfe noch einmal deine Angaben.</div>
 		<input type="submit" value="Passwort ändern" ng-click="changePassword()" />
+		<action-status success-text="Dein Passwort wurde erfolgreich geändert."
+						fail-text="Bitte überprüfe noch einmal deine Angaben."
+						active="pwchange.active" status="pwchange.status"></action-status>
 	</form>
 </div>
