tiny css chagne (selection)

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -34,12 +34,12 @@
 	outline: 2px solid rgba(64,166,98,0.5);
 }
 ::selection {
-	background: #40a662;
+	background: #007369;
 	color: #fefefe;
 	text-shadow: none;
 }
 ::-moz-selection {
-	background: #40a662;
+	background: #007369;
 	color: #fefefe;
 	text-shadow: none;
 }
