--- a/app/views/user/upgrade.html
+++ b/app/views/user/upgrade.html
@@ -1,7 +1,7 @@
 <h2>Die neue Plattform</h2>
 <h3>Wie aufregend!</h3>
 
-<p>Hallo {{user.username}}! Wie du siehst, hat sich hier einiges verändert.</p>
+<p>Hallo {{currentUser.username}}! Wie du siehst, hat sich hier einiges verändert.</p>
 
 <p>Da du bereits beim alten <em>ShowPad</em> einen Account hattest, möchten wir dich bitten, dein Passwort aus Sicherheitsgründen zu ändern und unsere neuen <a href="/rules">Regeln</a> zu akzeptieren.</p>
 
