--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -31,7 +31,7 @@
 	font-family: 'FiraSans', sans-serif;
 }
 *:focus {
-	outline: 2px solid rgba(64,166,98,0.5);
+	outline: none;
 }
 ::selection {
 	background: #007369;
@@ -176,7 +176,7 @@ h4 {
 	line-height: 1.25;
 }
 h1 {
-	font-size: 2em;
+	font-size: 1em;
 }
 h2 {
 	font-size: 1.5em;
@@ -224,6 +224,17 @@ hr {
 	border: 0;
 	border-top: 3px solid #eee;
 }
+
+/* Success */
+.success {
+	color: #40a662;
+}
+
+/* Fail */
+.fail {
+	color: #a64040;
+}
+
 
 /* Inputs */
 ::-webkit-input-placeholder {
@@ -310,6 +321,12 @@ button:active,
 	outline: none;
 	box-shadow: inset 0 -1px 0 rgba(0,0,0,.2);
 }
+.actionStatus {
+	display: inline-block;
+}
+.actionStatus > * {
+	font-weight: bold;
+}
 
 /* Links */
 a:link,
@@ -362,15 +379,15 @@ body {
 
 /* Header */
 header {
-	margin-bottom: 1em;
+	margin-bottom: 2em;
 }
 header h1 {
 	line-height: 1;
+	margin-bottom: 1em;
 }
-header a:link,
-header a:visited {
-	color: #111;
-	text-decoration: none;
+header img {
+	width: 100%;
+	height: auto;
 }
 
 /* Navigation */
@@ -487,6 +504,7 @@ nav li > input {
 .content {
 	width: 100%;
 	max-width: 50em;
+	padding-top: 3em;
 }
 .content > *:not(:last-child) {
 	margin-bottom: 1em;
@@ -540,8 +558,10 @@ ul.profile li:before {
 .profile-edit > *:not(:last-child) {
 	margin-bottom: 1em;
 }
-.profile-edit > *:last-child {
+.profile-edit > input:last-of-type {
+	display: inline-block;
 	max-width: 15em;
+	margin-right: 1em;
 }
 .profile-edit textarea {
 	height: 7em;
@@ -552,7 +572,7 @@ ul.profile li:before {
 	width: 5em;
 	height: 5em;
 	position: relative;
-	border: 1px solid #111;
+	border: 3px solid #111;
 	border-radius: .4em;
 }
 .block span {
