--- a/app/views/styleguide.html
+++ b/app/views/styleguide.html
@@ -1,39 +1,54 @@
 <h2>Styleguide</h2>
 
+<p>Dieser Styleguide beschreibt nur grundlegende Dinge, wie Farben, Schriftarten und Logos.</p>
+
 <h3>Logo</h3>
 <p>Das Logo folgt.</p>
 
 <h3>Primärfarben</h3>
 <div class="block" style="background-color: #40a662;">
-  <span>
-    <strong>Grün</strong><br />
-    Hex: #40A662<br />
-    RGB: 64 / 166 / 98
-  </span>
+	<span>
+		<strong>Grün</strong><br />
+		Hex: #40A662<br />
+		RGB: 64 / 166 / 98
+	</span>
 </div>
 <div class="block" style="background-color: #007369;">
-  <span>
-    <strong>Dunkelgrün</strong><br />
-    Hex: #007369<br />
-    RGB: 0 / 115 / 105
-  </span>
+	<span>
+		<strong>Dunkelgrün</strong><br />
+		Hex: #007369<br />
+		RGB: 0 / 115 / 105
+	</span>
 </div>
-<p>Als Standardfarbe wird für den Hintergrund <strong>#FEFEFE</strong> und für die Schrift <strong>#111111</strong> verwendet.</p>
+<div class="block" style="background-color: #fefefe;">
+	<span>
+		<strong>Weiß</strong><br />
+		Hex: #FEFEFE<br />
+		RGB: 254 / 254 / 254
+	</span>
+</div>
+<div class="block" style="background-color: #111;">
+	<span>
+		<strong>Schwarz</strong><br />
+		Hex: #111111<br />
+		RGB: 17 / 17 / 17
+	</span>
+</div>
 
 <h3>Sekundärfarben</h3>
-<div class="block" style="background-color: #888;">
-  <span>
-    <strong>Dunkelgrau</strong><br />
-    Hex: #888888<br />
-    RGB: 136 / 136 / 136
-  </span>
-</div>
 <div class="block" style="background-color: #eee;">
-  <span>
-    <strong>Hellgrau</strong><br />
-    Hex: #EEEEEE<br />
-    RGB: 238 / 238 / 238
-  </span>
+	<span>
+		<strong>Hellgrau</strong><br />
+		Hex: #EEEEEE<br />
+		RGB: 238 / 238 / 238
+	</span>
+</div>
+<div class="block" style="background-color: #666;">
+	<span>
+		<strong>Dunkelgrau</strong><br />
+		Hex: #666666<br />
+		RGB: 102 / 102 / 102
+	</span>
 </div>
 
 <h3>Schriftart</h3>
