--- a/app/views/user/profile.html
+++ b/app/views/user/profile.html
@@ -1,6 +1,7 @@
 <h2>Profil bearbeiten</h2>
+<h3>Fühl dich wie zu Hause.</h3>
 
-<p>Hallo {{user.username}}! Das hier ist dein persönliches Profil &mdash; fühl dich wie zu Hause.</p>
+<p>Hallo {{user.username}}! Willkommen in deinem persönlichen Profil.</p>
 
 
 <div class="form-wrapper">
@@ -16,7 +17,7 @@
 		</p>
 
 		<input type="submit" value="Änderungen speichern" ng-click="saveBioColor()" />
-		<action-status success-text="Deine Einstellungen wurden erfolgreich geändert."
+		<action-status  success-text="Einstellungen erfolgreich gespeichert."
 						fail-text="Bitte überprüfe noch einmal deine Angaben."
 						active="colorbio.active" status="colorbio.status"></action-status>
 	</form>
@@ -33,14 +34,14 @@
 		<input type="text" value="" placeholder="App.net" ng-model="user.socials['appnet']" />
 		<input type="text" value="" placeholder="Twitter" ng-model="user.socials['twitter']" />
 		<input type="submit" value="Verknüpfungen speichern" ng-click="saveSocials()" />
-		<action-status success-text="Deine Verknüpfungen wurden erfolgreich geändert."
+		<action-status  success-text="Verknüpfungen erfolgreich gespeichert."
 						fail-text="Bitte überprüfe noch einmal deine Angaben."
 						active="socials.active" status="socials.status"></action-status>
 	</form>
 </div>
 
 <div class="form-wrapper">
-	<h3>E-Mail-Adresse bearbeiten</h3>
+	<h3>E-Mail-Adresse</h3>
 
 	<p>Deine aktuelle E-Mail-Adresse lautet <strong>{{user.email}}</strong>. Sie wird nicht veröffentlicht.</p>
 
@@ -48,21 +49,21 @@
 		<input type="email" value="" placeholder="Neue E-Mail-Adresse" required ng-model="changemail.email" />
 		<input type="password" value="" placeholder="Aktuelles Passwort bestätigen" required ng-model="changemail.password" />
 		<input type="submit" value="E-Mail-Adresse ändern" ng-click="changeMail()" />
-		<action-status success-text="Deine E-Mail-Adresse wurde erfolgreich geändert."
+		<action-status  success-text="E-Mail-Adresse erfolgreich geändert."
 						fail-text="Bitte überprüfe noch einmal deine Angaben."
 						active="changemail.active" status="changemail.status"></action-status>
 	</form>
 </div>
 
 <div class="form-wrapper">
-	<h3>Passwort bearbeiten</h3>
+	<h3>Passwort</h3>
 
 	<form class="profile-edit">
 		<input type="password" value="" placeholder="Aktuelles Passwort bestätigen" required ng-model="pwchange.password" />
 		<input type="password" value="" placeholder="Neues Passwort" required ng-model="pwchange.newpassword" />
 		<input type="password" value="" placeholder="Neues Passwort wiederholen" required ng-model="pwchange.newpassword2" ng-equals="{{pwchange.newpassword}}" />
 		<input type="submit" value="Passwort ändern" ng-click="changePassword()" />
-		<action-status success-text="Dein Passwort wurde erfolgreich geändert."
+		<action-status  success-text="Passwort erfolgreich geändert."
 						fail-text="Bitte überprüfe noch einmal deine Angaben."
 						active="pwchange.active" status="pwchange.status"></action-status>
 	</form>
