--- a/app/views/rules.html
+++ b/app/views/rules.html
@@ -17,11 +17,11 @@
 	</li>
 	<li>
 		<strong>Die Mitarbeit erfolgt auf freiwilliger Basis.</strong><br />
-		Es gibt kein Recht auf eine Bezahlung. Mit eingenommenen Spenden werden die Technik und weitere anfallende Kosten beglichen.</li>
+		Wir bezahlen dich nicht. Eingenommene Spenden kommen der Plattform zugute.</li>
 	<li>
 		<strong>Spam ist absolut verboten.</strong><br />
 		Das gilt sowohl für den Editor und den dazugehörigen Chat, als auch für unseren IRC-Kanal und E-Mail-Verkehr.
 	</li>
 </ol>
 
-<p>Bei Regelverstößen behalten wir uns vor, Mitglieder nach eigenem Ermessen von der Plattform auszuschließen.</p>
+<p>Weitere Informationen finden sich bei den <a href="#">häufig gestellten Fragen</a>. Bei Regelverstößen behalten wir uns vor, Mitglieder nach eigenem Ermessen von der Plattform auszuschließen.</p>
