--- a/app/views/styleguide.html
+++ b/app/views/styleguide.html
@@ -6,28 +6,28 @@
 <p>Das Logo folgt.</p>
 
 <h3>Primärfarben</h3>
-<div class="block" style="background-color: #40a662;">
+<div class="colorblock" style="background-color: #40a662;">
 	<span>
 		<strong>Grün</strong><br />
 		Hex: #40A662<br />
 		RGB: 64 / 166 / 98
 	</span>
 </div>
-<div class="block" style="background-color: #007369;">
+<div class="colorblock" style="background-color: #007369;">
 	<span>
 		<strong>Dunkelgrün</strong><br />
 		Hex: #007369<br />
 		RGB: 0 / 115 / 105
 	</span>
 </div>
-<div class="block" style="background-color: #fefefe;">
+<div class="colorblock" style="background-color: #fefefe;">
 	<span>
 		<strong>Weiß</strong><br />
 		Hex: #FEFEFE<br />
 		RGB: 254 / 254 / 254
 	</span>
 </div>
-<div class="block" style="background-color: #111;">
+<div class="colorblock" style="background-color: #111;">
 	<span>
 		<strong>Schwarz</strong><br />
 		Hex: #111111<br />
@@ -36,14 +36,14 @@
 </div>
 
 <h3>Sekundärfarben</h3>
-<div class="block" style="background-color: #eee;">
+<div class="colorblock" style="background-color: #eee;">
 	<span>
 		<strong>Hellgrau</strong><br />
 		Hex: #EEEEEE<br />
 		RGB: 238 / 238 / 238
 	</span>
 </div>
-<div class="block" style="background-color: #666;">
+<div class="colorblock" style="background-color: #666;">
 	<span>
 		<strong>Dunkelgrau</strong><br />
 		Hex: #666666<br />
