--- a/app/views/user/profile.html
+++ b/app/views/user/profile.html
@@ -4,7 +4,7 @@
 <p>Hallo {{user.username}}! Willkommen in deinem persönlichen Profil.</p>
 
 
-<div class="form-wrapper">
+<div class="box-wrapper">
 	<h3>Beschreibung & Farbe</h3>
 
 	<p>Diese Angaben sind öffentlich einsehbar.</p>
@@ -23,7 +23,7 @@
 	</form>
 </div>
 
-<div class="form-wrapper">
+<div class="box-wrapper">
 	<h3>Verknüpfungen</h3>
 
 	<p>Diese Angaben sind öffentlich einsehbar.</p>
@@ -40,7 +40,7 @@
 	</form>
 </div>
 
-<div class="form-wrapper">
+<div class="box-wrapper">
 	<h3>E-Mail-Adresse</h3>
 
 	<p>Deine aktuelle E-Mail-Adresse lautet <strong>{{user.email}}</strong>. Sie wird nicht veröffentlicht.</p>
@@ -55,7 +55,7 @@
 	</form>
 </div>
 
-<div class="form-wrapper">
+<div class="box-wrapper">
 	<h3>Passwort</h3>
 
 	<form class="profile-edit">
